fixed docker config

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -4,7 +4,7 @@ services:
   app:
     image: vmcontract
     environment:
-      - _JAVA_OPTIONS=-Xmx512m -Xms256m
+      - _JAVA_OPTIONS=-Xmx2g -Xms512m
       - SPRING_PROFILES_ACTIVE=prod,api-docs
       - MANAGEMENT_PROMETHEUS_METRICS_EXPORT_ENABLED=true
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgresql:5432/vmContract
@@ -31,6 +31,8 @@ services:
       elasticsearch:
         condition: service_healthy
       keycloak:
+        condition: service_healthy
+      kafka:
         condition: service_healthy
   postgresql:
     extends:
